suppression base dans url + correction recevabilite naturalisation

--- a/src/main/resources/mails/admissibilityEmail.html
+++ b/src/main/resources/mails/admissibilityEmail.html
@@ -16,7 +16,7 @@
             Get appointment here :
         </p>
         <p>
-            <a th:href="@{|${baseUrl}/#/etudier/${applicationId}/rdv|}"
+            <a th:href="@{|${baseUrl}/#/${applicationId}/rdv|}"
                th:text="#{email.admissibility.link}">rdv</a>
         </p>
         <br/>
