--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -161,6 +161,7 @@
     <script src="scripts/components/application/application.service.js"></script>
     <script src="scripts/components/rdv/rdv.service.js"></script>
     
+    <script src="scripts/app/application/application.js"></script>
     <script src="scripts/app/application/identity/identity.js"></script>
     <script src="scripts/app/application/identity/identity.controller.js"></script>
     <script src="scripts/app/application/family/family.js"></script>
