--- a/src/main/webapp/scripts/app/application/identity/identity-light.html
+++ b/src/main/webapp/scripts/app/application/identity/identity-light.html
@@ -19,7 +19,7 @@
         <label translate="identity.form.firstName" for="field_firstName">FirstName</label>
         <input type="text" class="form-control" name="firstName" id="field_firstName" ng-model="identity.firstName" >
     </div>
-    <div ng-if="withFrancisation">
+    <div ng-if="identity.francisation">
 	    <div class="form-group">
 	        <label translate="identity.form.francisation" for="field_francisation">Francisation</label>
 	        <div>
