--- a/src/main/webapp/scripts/app/application/summary/summary.html
+++ b/src/main/webapp/scripts/app/application/summary/summary.html
@@ -97,7 +97,7 @@
 	<div class="row" ng-if="panelOpen==='Project'">
 		<div class="col-sm-11 col-sm-offset-1">
 			<div class="row validation-visualization-row opened">
-				<ng-include src="'scripts/app/application/project/project'+viewSuffix+'-view.html'"></ng-include>
+				<ng-include src="'scripts/app/application/project/project-'+nature+'-view.html'"></ng-include>
 			</div>
 		</div>
 	</div>
