--- a/src/main/webapp/scripts/app/usager/account/infos/infos.html
+++ b/src/main/webapp/scripts/app/usager/account/infos/infos.html
@@ -166,7 +166,7 @@
 		        <div class="form-group">
 		            <label translate="address.form.owner" for="field_owner">Owner</label>
 		            <input type="text" class="form-control" name="owner" id="field_owner"
-		                    ng-model="account.frenchAddress.owner">
+		                    ng-model="account.address.owner">
 		
 		            <div ng-show="infosForm.owner.$dirty && infosForm.owner.$invalid">
 		                <p class="help-block" ng-show="infosForm.owner.$error.required" translate="entity.validation.required">
@@ -176,7 +176,7 @@
 		        </div>
 		        <div class="form-group">
 		            <label translate="address.form.number" for="field_number">Number</label>
-		            <input type="text" class="form-control" name="number" id="field_number" ng-model="account.frenchAddress.number" required>
+		            <input type="text" class="form-control" name="number" id="field_number" ng-model="account.address.number" required>
 		
 		            <div ng-show="infosForm.number.$dirty && infosForm.number.$invalid">
 		                <p class="help-block" ng-show="infosForm.number.$error.required" translate="entity.validation.required">
@@ -187,7 +187,7 @@
 		        <div class="form-group">
 		            <label translate="address.form.street" for="field_street">Street</label>
 		            <input type="text" class="form-control" name="street" id="field_street"
-		                    ng-model="account.frenchAddress.street" required>
+		                    ng-model="account.address.street" required>
 		
 		            <div ng-show="infosForm.street.$dirty && infosForm.street.$invalid">
 		                <p class="help-block" ng-show="infosForm.street.$error.required" translate="entity.validation.required">
@@ -198,13 +198,13 @@
 		        <div class="form-group">
 		            <label translate="address.form.complement" for="field_complement">Complement</label>
 		            <input type="text" class="form-control" name="complement" id="field_complement"
-		                    ng-model="account.frenchAddress.complement" >
+		                    ng-model="account.address.complement" >
 		
 		        </div>
 		        <div class="form-group">
 		            <label translate="address.form.postalCode" for="field_postalCode">PostalCode</label>
 		            <input type="text" class="form-control" name="postalCode" id="field_postalCode"
-		                    ng-model="account.frenchAddress.postalCode" required>
+		                    ng-model="account.address.postalCode" required>
 		
 		            <div ng-show="infosForm.postalCode.$dirty && infosForm.postalCode.$invalid">
 		                <p class="help-block" ng-show="infosForm.postalCode.$error.required" translate="entity.validation.required">
@@ -215,7 +215,7 @@
 		        <div class="form-group">
 		            <label translate="address.form.city" for="field_city">City</label>
 		            <input type="text" class="form-control" name="city" id="field_city"
-		                    ng-model="account.frenchAddress.city" required>
+		                    ng-model="account.address.city" required>
 		
 		            <div ng-show="infosForm.city.$dirty && infosForm.city.$invalid">
 		                <p class="help-block" ng-show="infosForm.city.$error.required" translate="entity.validation.required">
@@ -225,7 +225,7 @@
 		        </div>
 		        <div class="form-group">
 		            <label translate="address.form.country" for="field_country">Country</label>
-		            <select-country name="country" id="field_country" ng-model="account.frenchAddress.country" required></select-country>
+		            <select-country name="country" id="field_country" ng-model="account.address.country" required></select-country>
 		
 		            <div ng-show="infosForm.country.$dirty && infosForm.country.$invalid">
 		                <p class="help-block" ng-show="infosForm.country.$error.required" translate="entity.validation.required">
@@ -236,7 +236,7 @@
 		        <div class="form-group">
 		            <label translate="address.form.phone" for="field_phone">Phone</label>
 		            <input type="text" class="form-control" name="phone" id="field_phone"
-		                    ng-model="account.frenchAddress.phone" required>
+		                    ng-model="account.address.phone" required>
 		
 		            <div ng-show="infosForm.phone.$dirty && infosForm.phone.$invalid">
 		                <p class="help-block" ng-show="infosForm.phone.$error.required" translate="entity.validation.required">
