creation page interview + modif page documents

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -208,6 +208,7 @@
     <script src="scripts/app/agent/identification/identification.js"></script>
     <script src="scripts/app/agent/identification/documents.controller.js"></script>
     <script src="scripts/app/agent/identification/biometrics.controller.js"></script>
+    <script src="scripts/app/agent/identification/interview.controller.js"></script>
     <script src="scripts/app/agent/validation/validation.js"></script>
     <script src="scripts/app/agent/validation/validation.controller.js"></script>
     <!-- FIN AGENT -->
