--- a/src/main/webapp/scripts/app/agent/identification/documents.html
+++ b/src/main/webapp/scripts/app/agent/identification/documents.html
@@ -4,49 +4,29 @@
     </div>
 	<br><br>
 	
-	<div class="row">
-		<div class="col-xs-9 col-sm-8 col-sm-offset-1">
-			<div class="collapsable-panel" ng-class="{'opened': passportOpened}" ng-click="passportOpened = !passportOpened">
-				<div class="panel-heading">
-					<span class="glyphicon" ng-class="{'glyphicon-triangle-top': passportOpened, 'glyphicon-triangle-bottom': !passportOpened}"></span>
-					<h5 class="panel-title" translate="identification.documents.passport">Passport</h5>
+	<div ng-repeat="panel in panels">
+		<div class="row">
+			<div class="col-xs-9 col-sm-8 col-sm-offset-1">
+				<div class="collapsable-panel" ng-class="{'opened': panel.opened}" ng-click="panel.opened = !panel.opened">
+					<div class="panel-heading">
+						<span class="glyphicon" ng-class="{'glyphicon-triangle-top': panel.opened, 'glyphicon-triangle-bottom': !panel.opened}"></span>
+						<h5 class="panel-title" ng-if="!panel.personType">{{'identification.documents.'+panel.documentType | translate}}</h5>
+						<h5 class="panel-title" ng-if="panel.personType">{{'identification.documents.'+panel.documentType | translate}} - {{'sejourApp.PersonType.'+panel.personType | translate: panel}}</h5>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="col-xs-3 validation-form">
-			<img class="hand" src="assets/images/checkbox_unchecked.png" ng-show="!passportValidated" ng-click="passportValidated = !passportValidated; passportOpened = false;">
-			<img class="hand" src="assets/images/checkbox_checked.png" ng-show="passportValidated" ng-click="passportValidated = !passportValidated">
-			<span translate="identification.documents.toCertify" ng-show="!passportValidated">To validate</span>
-			<span translate="identification.documents.certified" ng-show="passportValidated">validate</span>
-		</div>
-	</div>
-	<div class="row" ng-show="passportOpened">
-		<div class="col-sm-11 col-sm-offset-1">
-			<div class="row validation-visualization-row" ng-class="{'opened': passportOpened}">
-				<photo-viewer ng-model="application.identity.documents" type-filter="passport"></photo-viewer>
+			<div class="col-xs-3 validation-form">
+				<img class="hand" src="assets/images/checkbox_unchecked.png" ng-show="!panel.validated" ng-click="updatePanel(panel, true)">
+				<img class="hand" src="assets/images/checkbox_checked.png" ng-show="panel.validated" ng-click="updatePanel(panel, false)">
+				<span translate="identification.documents.toCertify" ng-show="!panel.validated">To validate</span>
+				<span translate="identification.documents.certified" ng-show="panel.validated">validate</span>
 			</div>
 		</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-9 col-sm-8 col-sm-offset-1">
-			<div class="collapsable-panel" ng-class="{'opened': birthActOpened}" ng-click="birthActOpened = !birthActOpened">
-				<div class="panel-heading">
-					<span class="glyphicon" ng-class="{'glyphicon-triangle-top': birthActOpened, 'glyphicon-triangle-bottom': !birthActOpened}"></span>
-					<h5 class="panel-title" translate="identification.documents.birthAct">birthAct</h5>
+		<div class="row" ng-show="panel.opened">
+			<div class="col-sm-11 col-sm-offset-1">
+				<div class="row validation-visualization-row opened">
+					<photo-viewer ng-model="panel.documents" type-filter="{{::panel.documentType}}"></photo-viewer>
 				</div>
-			</div>
-		</div>
-		<div class="col-xs-3 validation-form">
-			<img class="hand" src="assets/images/checkbox_unchecked.png" ng-show="!birthActValidated" ng-click="birthActValidated = !birthActValidated; birthActOpened = false;">
-			<img class="hand" src="assets/images/checkbox_checked.png" ng-show="birthActValidated" ng-click="birthActValidated = !birthActValidated">
-			<span translate="identification.documents.toCertify" ng-show="!birthActValidated">To validate</span>
-			<span translate="identification.documents.certified" ng-show="birthActValidated">validate</span>
-		</div>
-	</div>
-	<div class="row" ng-show="birthActOpened">
-		<div class="col-sm-11 col-sm-offset-1">
-			<div class="row validation-visualization-row" ng-class="{'opened': birthActOpened}">
-				<photo-viewer ng-model="application.identity.documents" type-filter="birthAct"></photo-viewer>
 			</div>
 		</div>
 	</div>
@@ -55,7 +35,7 @@
 	<div class="row row-center">
     	<button class="btn btn-success" 
     			translate="identification.documents.button.accept"
-    			ng-disabled="!passportValidated || !birthActValidated" 
+    			ng-disabled="docToValidate > 0"
     			ng-click="certify()" >Accept</button>
 	</div>
 </div>
