--- a/src/main/webapp/scripts/app/application/identity/identity-light-view.html
+++ b/src/main/webapp/scripts/app/application/identity/identity-light-view.html
@@ -25,7 +25,7 @@
 	    </div>
 	    <div class="form-group" ng-if="identity.francisation">
 	        <label translate="identity.form.firstNameFrancise">FirstNameFrancise</label>
-	        <input type="text" class="form-control" ng-model="identity.firstNameFrancise" >
+	        <input type="text" class="form-control" ng-model="identity.firstNameFrancise" readonly="readonly">
 	    </div>
 	</div>
     <div class="form-group">
