gestion recevabilité et validation identity, address et project

--- a/src/main/webapp/scripts/app/agent/admissibility/admissibility.html
+++ b/src/main/webapp/scripts/app/agent/admissibility/admissibility.html
@@ -28,7 +28,7 @@
 		</div>
 	</div>
 	<!-- FAMILY -->
-	<div ng-if="displayFamily">
+	<div ng-if="identity.family.length > 0">
 		<div class="row">
 			<div class="col-xs-9 col-sm-8 col-sm-offset-1">
 				<div class="collapsable-panel" ng-class="{'opened': panel.family.open}" ng-click="panel.family.open = !panel.family.open">
