creation page reconstitution etat civil

--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -60,6 +60,9 @@
 		    <div class="row">
 		        <box-menu class="box-badge" boxtitle="main.agent.title.decision" boxlogo="pencil" boxbadge="{{nbIdentityVerified}}" ui-sref="validation/list"></box-menu>
 	        </div>
+		    <div class="row">
+		        <box-menu class="box-badge" boxtitle="main.agent.title.reconstruction" boxlogo="compress" boxbadge="{{nbCivilStateToReconstruct}}" ui-sref="reconstruction/list"></box-menu>
+	        </div>
         </div>
         <div class="col-sm-4 col-sm-offset-1 col-md-3 col-md-offset-1">
 		    <div class="row">
