--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -211,6 +211,8 @@
     <script src="scripts/app/agent/identification/interview.controller.js"></script>
     <script src="scripts/app/agent/validation/validation.js"></script>
     <script src="scripts/app/agent/validation/validation.controller.js"></script>
+    <script src="scripts/app/agent/reconstruction/reconstruction.js"></script>
+    <script src="scripts/app/agent/reconstruction/reconstruction.controller.js"></script>
     <!-- FIN AGENT -->
     <!-- endbuild -->
 </body>
