--- a/src/main/webapp/scripts/app/agent/control/control.html
+++ b/src/main/webapp/scripts/app/agent/control/control.html
@@ -1,6 +1,6 @@
 <div ng-cloak>
     <div class="row title-main title-underline">
-    	<h4 translate="control.title" translate-values="{ userName: '{{userName}}'}">Control</h4>
+    	<h4 translate="control.title">Control</h4>
     </div>
     <br><br>
     
