--- a/src/main/webapp/scripts/app/application/project/project-sejour_etudiant.html
+++ b/src/main/webapp/scripts/app/application/project/project-sejour_etudiant.html
@@ -100,7 +100,8 @@
 		            </div>
 		        </div>
 		        <div class="form-group">
-		            <label translate="project.form.resourceAmount" for="field_resourceAmount">ResourceAmount</label>
+		            <label translate="project.form.resourceAmount.total" ng-if="project.resourceType === 'capital'" for="field_resourceAmount">ResourceAmount</label>
+		            <label translate="project.form.resourceAmount.monthly" ng-if="project.resourceType !== 'capital'" for="field_resourceAmount">ResourceAmount</label>
 		            <input type="number" class="form-control" name="resourceAmount" id="field_resourceAmount" min="0"
 		                    ng-model="project.resourceAmount" required>
 		
