--- a/src/main/webapp/scripts/app/application/identity/identity.html
+++ b/src/main/webapp/scripts/app/application/identity/identity.html
@@ -96,8 +96,16 @@
 		    <br>
 		    <div class="row">
 				<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
-				    <file-upload ng-model="identity.documents" doc-type="passport" translate-key="identity.form.passport"></file-upload>
-				    <file-upload ng-model="identity.documents" doc-type="birthAct" translate-key="identity.form.birthAct"></file-upload>
+				    <div class="form-group">
+					    <label translate="identity.form.passport"></label>
+						<tooltip tooltip-text="identity.form.passport.tooltip"></tooltip>
+					    <file-upload ng-model="identity.documents" doc-type="passport" translate-key="identity.form.passport.placeholder"></file-upload>
+					</div>
+					<div class="form-group">
+					    <label translate="identity.form.birthAct"></label>
+						<tooltip tooltip-text="identity.form.birthAct.tooltip"></tooltip>
+					    <file-upload ng-model="identity.documents" doc-type="birthAct" placeholder-key="identity.form.birthAct.placeholder"></file-upload>
+					</div>
 			   	</div>
 			</div>
 		</div>
