--- a/src/main/webapp/scripts/app/application/project/project-naturalisation.html
+++ b/src/main/webapp/scripts/app/application/project/project-naturalisation.html
@@ -47,9 +47,21 @@
 			    </div>
 			    <div ng-if="project.resourcesSearchAuthorized === false">
 			    	<br>
-			    	<file-upload ng-model="project.documents" doc-type="workContract" translate-key="project.form.resources.workContract"></file-upload>
-					<file-upload ng-model="project.documents" doc-type="workCertificate" translate-key="project.form.resources.workCertificate"></file-upload>
-					<file-upload ng-model="project.documents" doc-type="paySlip" translate-key="project.form.resources.paySlip"></file-upload>
+				    <div class="form-group">
+					    <label translate="project.form.resources.workContract"></label>
+						<tooltip tooltip-text="project.form.resources.workContract.tooltip"></tooltip>
+				    	<file-upload ng-model="project.documents" doc-type="workContract" placeholder-key="project.form.resources.workContract.placeholder"></file-upload>
+				    </div>
+				    <div class="form-group">
+					    <label translate="project.form.resources.workCertificate"></label>
+						<tooltip tooltip-text="project.form.resources.workCertificate.tooltip"></tooltip>
+						<file-upload ng-model="project.documents" doc-type="workCertificate" placeholder-key="project.form.resources.workCertificate.placeholder"></file-upload>
+					</div>
+				    <div class="form-group">
+					    <label translate="project.form.resources.paySlip"></label>
+						<tooltip tooltip-text="project.form.resources.paySlip.tooltip"></tooltip>
+						<file-upload ng-model="project.documents" doc-type="paySlip" placeholder-key="project.form.resources.paySlip.placeholder"></file-upload>
+					</div>
 			    </div>
 			</div>
 		</div>	
@@ -82,8 +94,16 @@
 			    </div>
 			    <div ng-if="project.taxSituationSearchAuthorized === false">
 			    	<br>
-			    	<file-upload ng-model="project.documents" doc-type="taxSlip" translate-key="project.form.taxSituation.taxSlip"></file-upload>
-					<file-upload ng-model="project.documents" doc-type="taxNotice" translate-key="project.form.taxSituation.taxNotice"></file-upload>
+				    <div class="form-group">
+					    <label translate="project.form.taxSituation.taxSlip"></label>
+						<tooltip tooltip-text="project.form.taxSituation.taxSlip.tooltip"></tooltip>
+				    	<file-upload ng-model="project.documents" doc-type="taxSlip" placeholder-key="project.form.taxSituation.taxSlip.placeholder"></file-upload>
+				    </div>
+				    <div class="form-group">
+					    <label translate="project.form.taxSituation.taxNotice"></label>
+						<tooltip tooltip-text="project.form.taxSituation.taxNotice.tooltip"></tooltip>
+						<file-upload ng-model="project.documents" doc-type="taxNotice" placeholder-key="project.form.taxSituation.taxNotice.placeholder"></file-upload>
+					</div>
 			    </div>
 			</div>
 		</div>
