--- a/src/main/webapp/scripts/app/application/project/project-sejour_etudiant.html
+++ b/src/main/webapp/scripts/app/application/project/project-sejour_etudiant.html
@@ -131,8 +131,16 @@
 	    <br>
 	    <div class="row">
 			<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
-				<file-upload ng-model="project.documents" doc-type="inscriptionCertificate" translate-key="project.form.inscriptionCertificate"></file-upload>
-				<file-upload ng-model="project.documents" doc-type="resourceProof" translate-key="project.form.resourceProof"></file-upload>
+			    <div class="form-group">
+				    <label translate="project.form.inscriptionCertificate"></label>
+					<tooltip tooltip-text="project.form.inscriptionCertificate.tooltip"></tooltip>
+					<file-upload ng-model="project.documents" doc-type="inscriptionCertificate" placeholder-key="project.form.inscriptionCertificate.placeholder"></file-upload>
+				</div>
+			    <div class="form-group">
+				    <label translate="project.form.resourceProof"></label>
+					<tooltip tooltip-text="project.form.resourceProof.tooltip"></tooltip>
+					<file-upload ng-model="project.documents" doc-type="resourceProof" placeholder-key="project.form.resourceProof.placeholder"></file-upload>
+				</div>
 		    </div>
 		</div>
 		<br><br>
